--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "axios-retry": "^4.0.0",
     "clsx": "^2.1.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
