update yml file for deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ jobs:
 
       - name: Build project
         run: npm run build
+        env:
+          VITE_API_URL_OPENAPI_1: ${{ secrets.VITE_API_URL_OPENAPI_1 }}
+          VITE_API_URL_OPENAPI_2: ${{ secrets.VITE_API_URL_OPENAPI_2 }}
+          VITE_API_URL_OPENAPI_PASSWORD: ${{ secrets.VITE_API_URL_OPENAPI_PASSWORD }}
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
